# google_trans_new

./: setup.cfg
google_trans_new/: __init__.py  google_trans_new.py
