[metadata]
name = google_translate_new
version = 0.0.1-dev
description = A free and unlimited python API for google translate.
url = https://github.com/Jimmy2027/google_trans_new
keywords =
    google_translate_new

provides = google_translate_new

license = MIT
license_file = LICENSE

[options]
python_requires = >=3.7
install_requires =

    requests
    urllib3



packages = find:




